Add 'Dias por Semana' input and PDF export button
Added input for 'Dias por Semana' and export button.

--- a/ProgramaAlimentar.html
+++ b/ProgramaAlimentar.html
@@ -18,6 +18,9 @@
         <div class="form-grupo">
             <label for="qtdPeixes">Quantidade de Peixes:</label>
             <input type="number" id="qtdPeixes" value="10000" required>
+            
+            <label for="tamanhoSemana">Dias por Semana:</label>    
+            <input type="number" id="tamanhoSemana" value="7" required>
         </div>
 
         <h2>2. Fases de Cultivo</h2>
@@ -25,7 +28,7 @@
             </div>
         <button type="button" id="btn-adicionar-periodo">Adicionar Fase</button>
         <hr>
-        <button type="submit" id="btn-gerar-relatorio">Gerar Relatório</button>
+        <button type="button" id="btn-gerar-relatorio">Gerar Relatório</button>
     </form>
 
 
@@ -43,8 +46,7 @@
                 <label>Ração (Descrição)</label>
                 <label>Ração (Granulometria)</label>
                 <label>Preço Ração</label>
-                <label>Tamanho da Semana</label>
-                <label>Trato Diário (%)</label>
+                <label>Trato Diário (% do P.V.)</label>
                 <label>Tratos/Dia</label>
             </div>
 
@@ -60,7 +62,6 @@
             <input type="text" name="desc-racao" class="desc-racao" required>
             <input type="text" name="gran-racao" class="gran-racao" required>
             <input type="number" name="preco-racao" class="preco-racao" step="0.01" required>
-            <input type="number" name="dias-fase" class="dias-fase" required>
             <input type="number" name="trato-diario" class="trato-diario" step="0.1" required>
             <input type="number" name="tratos-dia" class="tratos-dia" required>
             <button type="button" class="btn-remover-fase">-</button>
@@ -72,11 +73,20 @@
         <div id="container-tabelas" class="coluna"></div>
     </div>
 
+    <div id="acoes-relatorio" style="margin-top:20px; text-align:center;">
+        <button id="btn-exportar-pdf">📄 Exportar PDF</button>
+    </div>
+
+    <!-- Biblioteca para PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
     <script type="module" src="ProgramaAlimentar.js"></script>
+
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
+                // Caminho corrigido para ser relativo ao arquivo HTML
+                navigator.serviceWorker.register('service-worker.js') 
                     .then(registration => {
                         console.log('Service Worker registrado com sucesso:', registration);
                     })
@@ -86,5 +96,8 @@
             });
         }
     </script>
+
+
+
 </body>
 </html>
